--- a/package.json
+++ b/package.json
@@ -9,11 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
+    "framer-motion": "6",
+    "js-cookie": "^3.0.1",
+    "lodash.debounce": "^4.0.8",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.38.0",
+    "react-redux": "^8.0.1",
+    "sass": "^1.51.0",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
