--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "js-cookie": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "next": "12.1.5",
+    "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-flip-move": "^3.0.4",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-query": "^3.38.0",
     "react-redux": "^8.0.1",
+    "react-select": "^5.3.1",
     "sass": "^1.51.0",
     "swiper": "^8.1.4"
   },
