--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "framer-motion": "6",
@@ -29,7 +30,8 @@
     "react-redux": "^8.0.1",
     "react-select": "^5.3.1",
     "sass": "^1.51.0",
-    "swiper": "^8.1.4"
+    "swiper": "^8.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
