--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11",
     "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "framer-motion": "6",
     "js-cookie": "^3.0.1",
@@ -30,6 +31,7 @@
     "react-redux": "^8.0.1",
     "react-select": "^5.3.1",
     "sass": "^1.51.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
     "yup": "^0.32.11"
   },
