--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/js-cookie": "^3.0.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.30",
