--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "12.1.5",
     "query-string": "^7.1.1",
+    "rc-rate": "^2.9.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-flip-move": "^3.0.4",
