--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "6",
     "js-cookie": "^3.0.1",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "query-string": "^7.1.1",
     "rc-rate": "^2.9.1",
