--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-query": "^3.38.0",
     "react-redux": "^8.0.1",
     "react-select": "^5.3.1",
+    "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
