feature: update schemas, enums

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_API_URL = "http://localhost:5000"
+NEXT_PUBLIC_API_URL=http://localhost:5000
+NEXTAUTH_URL=http://localhost:3000
+JWT_SECRET_KEY=iGJVeTA1UCDQsMJWfkBLsVNG4ulRkOUNgIfXWHk7
