--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "class-validator": "^0.13.2",
     "framer-motion": "6",
     "js-cookie": "^3.0.1",
     "lodash.debounce": "^4.0.8",
@@ -26,13 +27,13 @@
     "rc-rate": "^2.9.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-flip-move": "^3.0.4",
+    "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.3",
     "react-query": "^3.38.0",
     "react-redux": "^8.0.1",
-    "react-select": "^5.3.1",
+    "react-select": "^5.3.2",
     "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
