--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.3",
     "next": "12.1.5",
+    "next-i18next": "^11.0.0",
     "query-string": "^7.1.1",
     "rc-rate": "^2.9.1",
     "react": "18.1.0",
