--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,2 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000
-NEXTAUTH_URL=http://localhost:3000
-JWT_SECRET_KEY=iGJVeTA1UCDQsMJWfkBLsVNG4ulRkOUNgIfXWHk7
+NEXT_PUBLIC_LOCATION_API_URL=https://provinces.open-api.vn/api
