--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dd-store",
+  "name": "fys-unisex",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,10 +20,8 @@
     "class-validator": "^0.13.2",
     "framer-motion": "6",
     "js-cookie": "^3.0.1",
-    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.3",
     "next": "12.1.5",
-    "next-i18next": "^11.0.0",
     "query-string": "^7.1.1",
     "rc-rate": "^2.9.1",
     "react": "18.1.0",
@@ -45,7 +43,6 @@
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
     "@types/js-cookie": "^3.0.2",
-    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
