--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000
 NEXT_PUBLIC_LOCATION_API_URL=https://provinces.open-api.vn/api
+NEXT_PUBLIC_AWS_CLOUD_FRONT_URL=https://do2g7bfc9eoz9.cloudfront.net/
