--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "11",
     "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.8.1",
-    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "class-validator": "^0.13.2",
     "framer-motion": "6",
@@ -33,7 +32,9 @@
     "react-query": "^3.38.0",
     "react-redux": "^8.0.1",
     "react-select": "^5.3.2",
+    "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.0.1",
+    "rooks": "^5.11.2",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
@@ -46,6 +47,7 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "husky": "^7.0.4",
