--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f .dev.env next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "env-cmd -f .prod.env next start",
     "lint": "next lint",
     "prepare": "husky install"
   },
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "class-validator": "^0.13.2",
+    "env-cmd": "^10.1.0",
+    "firebase": "^9.8.4",
     "framer-motion": "6",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.3",
@@ -47,6 +49,7 @@
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
