--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.1",
+    "react-flip-move": "^3.0.4",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.3",
