feature: add dashboard module

--- a/.prod.env
+++ b/.prod.env
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_API_URL = "http://localhost:5000"
+NEXT_PUBLIC_API_URL=http://localhost:5000
+NEXT_PUBLIC_LOCATION_API_URL=https://provinces.open-api.vn/api
+NEXT_PUBLIC_AWS_CLOUD_FRONT_URL=https://do2g7bfc9eoz9.cloudfront.net/
+NEXT_PUBLIC_GOOGLE_RECAPTCHA_SITE_KEY=6Lf1YJ0gAAAAACnO3xLXDiFoEM-wJY1JxfbeojVW
