--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-query": "^3.38.0",
     "react-redux": "^8.0.1",
     "react-select": "^5.3.2",
+    "react-table": "^7.8.0",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.0.1",
     "rooks": "^5.11.2",
@@ -51,6 +52,7 @@
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-table": "^7.7.12",
     "@types/styled-components": "^5.1.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
