--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "query-string": "^7.1.1",
     "rc-rate": "^2.9.2",
     "react": "18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
     "react-dropzone": "^14.2.1",
     "react-flip-move": "^3.0.4",
+    "react-focus-lock": "^2.9.1",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.3",
@@ -39,11 +41,9 @@
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.0.1",
     "react-zoom-pan-pinch": "^2.1.3",
-    "rooks": "^5.11.2",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.4",
-    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -52,6 +52,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.3",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-table": "^7.7.12",
